--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,23 @@ h4 {
   width: 100%;
   margin-left: 300px;
 }
+.fahvH {
+  width: fit-content;
+  margin-left: 300px;
+}
+.fahvH h1 {
+  margin-top: 30px;
+}
+.non{
+  margin-top: 50px;
+
+}
+.fahv {
+  margin-top: 50px;
+  display: grid;
+  column-gap: 20px;
+  grid-template-columns: auto auto auto auto;
+}
 .sidebar {
   font-size: 20px;
   font-weight: 900;
