--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,7 @@ h4 {
   height: 100%;
   padding: 30px 0;
 }
+
 .wrapper .maincontent {
   width: 100%;
   margin-left: 300px;
@@ -44,9 +45,9 @@ h4 {
 .fahvH h1 {
   margin-top: 30px;
 }
-.non{
+.non {
   margin-top: 50px;
-
+  text-align: center;
 }
 .fahv {
   margin-top: 50px;
